Fix truncation and ellipses for very long file names (#2533)

--- a/packages/@uppy/provider-views/src/style/uppy-ProviderBrowser-viewType--list.scss
+++ b/packages/@uppy/provider-views/src/style/uppy-ProviderBrowser-viewType--list.scss
@@ -75,5 +75,10 @@
       max-width: 20px;
       max-height: 20px;
     }
+    span {
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+    }
   }
 }
